--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap" rel="stylesheet">
     <title>Car Game</title>
 </head>
 <body>
     <div class="carGame">
         <div class="score"></div>
         <div class="startScreen">
-            <p> Press here to Start<br>
+            <p> !Before Click Press all 4 arrow keys<br>
+                Press here to Start<br>
                 Arrow Keys to Move <br>
                 If you hit another car you will Loose.
             </p>
         </div>
-        <div class="gameArea hide"></div>
+        <div class="gameArea"></div>
     </div>
 
 
