--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <div class="carGame">
         <div class="score"></div>
         <div class="startScreen">
-            <p> !Before Click Press all 4 arrow keys<br>
-                Press here to Start<br>
+            <p> Press here to Start<br>
                 Arrow Keys to Move <br>
                 If you hit another car you will Loose.
             </p>
