+gaurav carSound with loop added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         </div>
         <div class="gameArea"></div>
     </div>
+    <audio class="music" controls loop>
+        <source src="./carSound.mpeg" type="audio/ogg">
+        <source src="./carSound.mpeg" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 
 
 
